src/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':='", "'<>'", "'<'", "'<='", "'>'", 
                     "'>='", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'='", "'('", 
                     "')'", "';'", "':'", "'['", "']'", "','", "'..'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "BLOCK_COMMENT", 
                      "NEW_BLOCK_COMMENT", "LINE_COMMENT", "VAR", "FUNCTION", 
                      "PROCEDURE", "ARRAY", "OF", "INTEGER", "BOOLEAN", 
                      "REAL", "STRING", "TRUE", "FALSE", "IF", "THEN", "ELSE", 
                      "WHILE", "DO", "FOR", "TO", "DOWNTO", "BREAK", "CONTINUE", 
                      "RETURN", "BEGIN", "END", "WITH", "DIV", "OR", "AND", 
                      "NOT", "MOD", "PLUS", "MINUS", "MULT", "DIVI", "EQUALS", 
                      "LB", "RB", "SEMI", "COLON", "LSB", "RSB", "COMMA", 
                      "DOUBLEDOT", "ID", "BOOLLIT", "INTLIT", "FLOATLIT", 
                      "STRINGLIT", "WS", "ERROR_CHAR", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_vardecblock = 1
    RULE_vardec = 2
    RULE_listofid = 3
    RULE_twotype = 4
    RULE_pritype = 5
    RULE_arraytype = 6
    RULE_indexlist = 7
    RULE_funcdec = 8
    RULE_paralist = 9
    RULE_paradec = 10
    RULE_returntype = 11
    RULE_prodec = 12
    RULE_statement = 13
    RULE_assignstmt = 14
    RULE_vari = 15
    RULE_ifstmt = 16
    RULE_whilestmt = 17
    RULE_forstmt = 18
    RULE_chooseassign = 19
    RULE_breakstmt = 20
    RULE_continuestmt = 21
    RULE_returnstmt = 22
    RULE_compoundstmt = 23
    RULE_withstmt = 24
    RULE_callstmt = 25
    RULE_explist = 26
    RULE_expression = 27
    RULE_expression1 = 28
    RULE_expression2 = 29
    RULE_expression3 = 30
    RULE_expression4 = 31
    RULE_expression5 = 32
    RULE_expression6 = 33
    RULE_funccall = 34
    RULE_literals = 35

    ruleNames =  [ "program", "vardecblock", "vardec", "listofid", "twotype", 
                   "pritype", "arraytype", "indexlist", "funcdec", "paralist", 
                   "paradec", "returntype", "prodec", "statement", "assignstmt", 
                   "vari", "ifstmt", "whilestmt", "forstmt", "chooseassign", 
                   "breakstmt", "continuestmt", "returnstmt", "compoundstmt", 
                   "withstmt", "callstmt", "explist", "expression", "expression1", 
                   "expression2", "expression3", "expression4", "expression5", 
                   "expression6", "funccall", "literals" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    BLOCK_COMMENT=7
    NEW_BLOCK_COMMENT=8
    LINE_COMMENT=9
    VAR=10
    FUNCTION=11
    PROCEDURE=12
    ARRAY=13
    OF=14
    INTEGER=15
    BOOLEAN=16
    REAL=17
    STRING=18
    TRUE=19
    FALSE=20
    IF=21
    THEN=22
    ELSE=23
    WHILE=24
    DO=25
    FOR=26
    TO=27
    DOWNTO=28
    BREAK=29
    CONTINUE=30
    RETURN=31
    BEGIN=32
    END=33
    WITH=34
    DIV=35
    OR=36
    AND=37
    NOT=38
    MOD=39
    PLUS=40
    MINUS=41
    MULT=42
    DIVI=43
    EQUALS=44
    LB=45
    RB=46
    SEMI=47
    COLON=48
    LSB=49
    RSB=50
    COMMA=51
    DOUBLEDOT=52
    ID=53
    BOOLLIT=54
    INTLIT=55
    FLOATLIT=56
    STRINGLIT=57
    WS=58
    ERROR_CHAR=59
    ILLEGAL_ESCAPE=60
    UNCLOSE_STRING=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecblock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VardecblockContext)
            else:
                return self.getTypedRuleContext(MPParser.VardecblockContext,i)


        def funcdec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.FuncdecContext)
            else:
                return self.getTypedRuleContext(MPParser.FuncdecContext,i)


        def prodec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ProdecContext)
            else:
                return self.getTypedRuleContext(MPParser.ProdecContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.VAR) | (1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE))) != 0):
                self.state = 75
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MPParser.VAR]:
                    self.state = 72
                    self.vardecblock()
                    pass
                elif token in [MPParser.FUNCTION]:
                    self.state = 73
                    self.funcdec()
                    pass
                elif token in [MPParser.PROCEDURE]:
                    self.state = 74
                    self.prodec()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardecblockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def vardec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VardecContext)
            else:
                return self.getTypedRuleContext(MPParser.VardecContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_vardecblock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecblock" ):
                return visitor.visitVardecblock(self)
            else:
                return visitor.visitChildren(self)




    def vardecblock(self):

        localctx = MPParser.VardecblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vardecblock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(MPParser.VAR)
            self.state = 84 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 81
                self.vardec()
                self.state = 82
                self.match(MPParser.SEMI)
                self.state = 86 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listofid(self):
            return self.getTypedRuleContext(MPParser.ListofidContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def twotype(self):
            return self.getTypedRuleContext(MPParser.TwotypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_vardec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardec" ):
                return visitor.visitVardec(self)
            else:
                return visitor.visitChildren(self)




    def vardec(self):

        localctx = MPParser.VardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.listofid()
            self.state = 89
            self.match(MPParser.COLON)
            self.state = 90
            self.twotype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListofidContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def COMMA(self):
            return self.getToken(MPParser.COMMA, 0)

        def listofid(self):
            return self.getTypedRuleContext(MPParser.ListofidContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_listofid

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListofid" ):
                return visitor.visitListofid(self)
            else:
                return visitor.visitChildren(self)




    def listofid(self):

        localctx = MPParser.ListofidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_listofid)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.match(MPParser.ID)
                self.state = 93
                self.match(MPParser.COMMA)
                self.state = 94
                self.listofid()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(MPParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TwotypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pritype(self):
            return self.getTypedRuleContext(MPParser.PritypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MPParser.ArraytypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_twotype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTwotype" ):
                return visitor.visitTwotype(self)
            else:
                return visitor.visitChildren(self)




    def twotype(self):

        localctx = MPParser.TwotypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_twotype)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.INTEGER, MPParser.BOOLEAN, MPParser.REAL, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.pritype()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.arraytype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PritypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return MPParser.RULE_pritype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPritype" ):
                return visitor.visitPritype(self)
            else:
                return visitor.visitChildren(self)




    def pritype(self):

        localctx = MPParser.PritypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_pritype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.INTEGER) | (1 << MPParser.BOOLEAN) | (1 << MPParser.REAL) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArraytypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def indexlist(self):
            return self.getTypedRuleContext(MPParser.IndexlistContext,0)


        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def pritype(self):
            return self.getTypedRuleContext(MPParser.PritypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_arraytype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraytype" ):
                return visitor.visitArraytype(self)
            else:
                return visitor.visitChildren(self)




    def arraytype(self):

        localctx = MPParser.ArraytypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arraytype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MPParser.ARRAY)
            self.state = 105
            self.match(MPParser.LSB)
            self.state = 106
            self.indexlist()
            self.state = 107
            self.match(MPParser.RSB)
            self.state = 108
            self.match(MPParser.OF)
            self.state = 109
            self.pritype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IndexlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MPParser.ExpressionContext,i)


        def DOUBLEDOT(self):
            return self.getToken(MPParser.DOUBLEDOT, 0)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.MINUS)
            else:
                return self.getToken(MPParser.MINUS, i)

        def getRuleIndex(self):
            return MPParser.RULE_indexlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexlist" ):
                return visitor.visitIndexlist(self)
            else:
                return visitor.visitChildren(self)




    def indexlist(self):

        localctx = MPParser.IndexlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_indexlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.MINUS:
                self.state = 111
                self.match(MPParser.MINUS)


            self.state = 114
            self.expression(0)
            self.state = 115
            self.match(MPParser.DOUBLEDOT)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.MINUS:
                self.state = 116
                self.match(MPParser.MINUS)


            self.state = 119
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def returntype(self):
            return self.getTypedRuleContext(MPParser.ReturntypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundstmt(self):
            return self.getTypedRuleContext(MPParser.CompoundstmtContext,0)


        def paralist(self):
            return self.getTypedRuleContext(MPParser.ParalistContext,0)


        def vardecblock(self):
            return self.getTypedRuleContext(MPParser.VardecblockContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_funcdec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdec" ):
                return visitor.visitFuncdec(self)
            else:
                return visitor.visitChildren(self)




    def funcdec(self):

        localctx = MPParser.FuncdecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcdec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(MPParser.FUNCTION)
            self.state = 122
            self.match(MPParser.ID)
            self.state = 123
            self.match(MPParser.LB)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 124
                self.paralist()


            self.state = 127
            self.match(MPParser.RB)
            self.state = 128
            self.match(MPParser.COLON)
            self.state = 129
            self.returntype()
            self.state = 130
            self.match(MPParser.SEMI)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 131
                self.vardecblock()


            self.state = 134
            self.compoundstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParalistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paradec(self):
            return self.getTypedRuleContext(MPParser.ParadecContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def paralist(self):
            return self.getTypedRuleContext(MPParser.ParalistContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_paralist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParalist" ):
                return visitor.visitParalist(self)
            else:
                return visitor.visitChildren(self)




    def paralist(self):

        localctx = MPParser.ParalistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paralist)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.paradec()
                self.state = 137
                self.match(MPParser.SEMI)
                self.state = 138
                self.paralist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.paradec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParadecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listofid(self):
            return self.getTypedRuleContext(MPParser.ListofidContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def pritype(self):
            return self.getTypedRuleContext(MPParser.PritypeContext,0)


        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def arraytype(self):
            return self.getTypedRuleContext(MPParser.ArraytypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_paradec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParadec" ):
                return visitor.visitParadec(self)
            else:
                return visitor.visitChildren(self)




    def paradec(self):

        localctx = MPParser.ParadecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paradec)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.listofid()
                self.state = 144
                self.match(MPParser.COLON)
                self.state = 145
                self.pritype()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.match(MPParser.ID)
                self.state = 148
                self.match(MPParser.COLON)
                self.state = 149
                self.arraytype()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturntypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pritype(self):
            return self.getTypedRuleContext(MPParser.PritypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MPParser.ArraytypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_returntype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturntype" ):
                return visitor.visitReturntype(self)
            else:
                return visitor.visitChildren(self)




    def returntype(self):

        localctx = MPParser.ReturntypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_returntype)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.INTEGER, MPParser.BOOLEAN, MPParser.REAL, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.pritype()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.arraytype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProdecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundstmt(self):
            return self.getTypedRuleContext(MPParser.CompoundstmtContext,0)


        def paralist(self):
            return self.getTypedRuleContext(MPParser.ParalistContext,0)


        def vardecblock(self):
            return self.getTypedRuleContext(MPParser.VardecblockContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_prodec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProdec" ):
                return visitor.visitProdec(self)
            else:
                return visitor.visitChildren(self)




    def prodec(self):

        localctx = MPParser.ProdecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_prodec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(MPParser.PROCEDURE)
            self.state = 157
            self.match(MPParser.ID)
            self.state = 158
            self.match(MPParser.LB)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 159
                self.paralist()

